--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.3",
+    "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
+    "default-passive-events": "^2.0.0",
     "react": "^17.0.1",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^4.0.3",
